links component updated

--- a/site/src/app/home/home.component.html
+++ b/site/src/app/home/home.component.html
@@ -1,7 +1,1 @@
-<div id="flex-box">
-  <div id="flex-box-item">
-    <div id="main-container">
-      <app-links-component></app-links-component>
-    </div>
-  </div>
-</div>
+<app-navbar></app-navbar>
