--- a/site/src/app/links/links.component.html
+++ b/site/src/app/links/links.component.html
@@ -1,9 +1,12 @@
-  <div class="col">
-    <section class="row">
-      <ng-container *ngFor="let l of filteredLinks;">
-        <div class="col">
-          <app-link-card [link]="l"></app-link-card>
+<div class="row w-100 mr-0 ml-0">
+    <div class="col-md-12 col-sm-12">
+        <div class="row">
+            <ng-container *ngFor="let link of filteredLinks; let i = index">
+                <div class="col-4">
+                    <app-link-card [link]="link"></app-link-card>
+                </div>
+                <div class="w-100" *ngIf="(i+1)%3 === 0"></div>
+            </ng-container>
         </div>
-      </ng-container>
-    </section>
-  </div>
+    </div>
+</div>
