--- a/site/src/app/links/links-filter/filter.component.html
+++ b/site/src/app/links/links-filter/filter.component.html
@@ -1,12 +1,12 @@
 <div class="sticky-top" style="top:80px;">
   <div class="list-group">
     <a [class.active]="!filter"
-      routerLink="/links"
+      routerLink="/v"
       class="list-group-item list-group-item-action">
       All Drivers
     </a>
     <a class="list-group-item list-group-item-action"
-      routerLink="/links"
+      routerLink="/v"
       [queryParams]="{filter: f.key}"
       [class.active]="filters === filters.key"
       *ngFor="let f of filters | async">
