--- a/site/src/app/links/links.component.html
+++ b/site/src/app/links/links.component.html
@@ -1,4 +1,4 @@
-<div class="row w-100 mr-0 ml-0">
+<div class="row w-100 h-100 mr-0 ml-0 mt-2">
     <div class="col-md-12 col-sm-12">
         <div class="row">
             <ng-container *ngFor="let link of filteredLinks; let i = index">
