--- a/site/src/app/navbar/app-navbar.component.css
+++ b/site/src/app/navbar/app-navbar.component.css
@@ -102,3 +102,19 @@ body {
 #navbar {
     background: #f8f9fa;
 }
+
+.navbar-collapse.collapse {
+    display: block!important;
+}
+
+.navbar-nav>li, .navbar-nav {
+    float: left !important;
+}
+
+.navbar-nav.navbar-right:last-child {
+    margin-right: -15px !important;
+}
+
+.navbar-right {
+    float: right!important;
+}
