--- a/site/src/app/navbar/app-navbar.component.html
+++ b/site/src/app/navbar/app-navbar.component.html
@@ -1,19 +1,22 @@
-<nav class="navbar navbar-inverse navbar-fixed-left" id="navbar">
+<nav class="navbar navbar-fixed-left" id="navbar">
   <div class="container">
     <div class="navbar-header" style="top: 2%; position: absolute;">
-      <a class="navbar-brand" href="/">L-SAP</a>
+      <a class="navbar-brand" routerLink="/">L-SAP</a>
 
       <select id="version" [(ngModel)]="version" (ngModelChange)="updateVersion(version)" required>
         <option *ngFor="let v of versions">{{ v }}</option>
       </select>
     </div>
     <div class="col">
-      <div class="input-group mb-3 mr-0 ml-0">
+      <div class="input-group mb-3 mr-0 ml-0 mt-0">
         <input id='search' type="text" class="form-control" placeholder="Search" aria-label="Username" aria-describedby="basic-addon1" (input)="search($event)"
                ng-model="values">
       </div>
-      <app-filter [filter]="filter"></app-filter>
+      <!--<app-filter [filter]="filter"></app-filter>-->
     </div>
   </div>
 </nav>
-<app-links-component [searchTerm]="searchTerm" [version]="version"></app-links-component>
+<div *ngIf="version">
+  <app-links-component [searchTerm]="searchTerm" [version]="version"></app-links-component>
+</div>
+
