--- a/site/src/styles.css
+++ b/site/src/styles.css
@@ -1,12 +1,19 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+/*@import "~bootstrap/dist/css/bootstrap.min.css";*/
 
-@import "~font-awesome/css/font-awesome.min.css";
+/*@import "~font-awesome/css/font-awesome.min.css";*/
 
 @import "https://fonts.googleapis.com/css?family=Open+Sans";
 
-body {
-  background: ivory;
-  margin-left: 20%;
+body, html {
+  height: 100%;
+  width:100%;
+}
+
+main {
+  height:100%;
+  width:100%;
+  margin-left: 232px !important;
+  font-size: 1.35vw;
 }
 
 p, h1, h2, h3, h4, h5, h6, a {
