--- a/site/src/app/links/links.component.html
+++ b/site/src/app/links/links.component.html
@@ -1,9 +1,9 @@
 <div class="row w-100 h-100 mr-0 ml-0 mt-2">
     <div class="col-md-12 col-sm-12">
         <div class="row">
-            <ng-container *ngFor="let link of filteredLinks; let i = index">
-                <div class="col-4">
-                    <app-link-card [link]="link"></app-link-card>
+            <ng-container *ngFor="let linkObject of links; let i = index">
+                <div class="col-4" *ngIf="linkObject">
+                    <app-link-card [linkObject]="linkObject"></app-link-card>
                 </div>
                 <div class="w-100" *ngIf="(i+1)%3 === 0"></div>
             </ng-container>
