--- a/site/src/app/navbar/app-navbar.component.html
+++ b/site/src/app/navbar/app-navbar.component.html
@@ -12,7 +12,7 @@
         <input id='search' type="text" class="form-control" placeholder="Search" aria-label="Username" aria-describedby="basic-addon1" (input)="search($event)"
                ng-model="values">
       </div>
-      <!--<app-filter [filter]="filter"></app-filter>-->
+      <app-filter [filter]="filter"></app-filter>
     </div>
   </div>
 </nav>
