--- a/site/src/app/app.component.html
+++ b/site/src/app/app.component.html
@@ -1,4 +1,2 @@
-<main role="main"
-      class="container">
-  <router-outlet></router-outlet>
-</main>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
