--- a/site/src/app/home/home.component.html
+++ b/site/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<!--<app-navbar></app-navbar>-->
+<app-navbar></app-navbar>
+<div *ngIf="version">
+    <app-links-component [searchTerm]="searchTerm" [version]="selectedVersion"></app-links-component>
+</div>
