--- a/site/src/app/navbar/app-navbar.component.html
+++ b/site/src/app/navbar/app-navbar.component.html
@@ -2,7 +2,6 @@
   <div class="container">
     <div class="navbar-header" style="top: 2%; position: absolute;">
       <a class="navbar-brand" routerLink="/v/{{versionStripped}}">L-SAP</a>
-
       <select id="version" required>
         <option *ngFor="let v of versions">{{ version }}</option>
       </select>
@@ -12,9 +11,7 @@
         <input id='search' type="text" class="form-control" placeholder="Search" aria-label="Username" aria-describedby="basic-addon1" (input)="search($event)"
                ng-model="values">
       </div>
-      <div *ngIf="version">
-        <app-filter [filter]="filter" [version]="versionStripped"></app-filter>
-      </div>
+      <app-filter [version]="versionStripped"></app-filter>
     </div>
   </div>
 </nav>
