--- a/site/src/app/navbar/app-navbar.component.html
+++ b/site/src/app/navbar/app-navbar.component.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="navbar-header" style="top: 2%; position: absolute;">
       <a class="navbar-brand" routerLink="/v/{{versionStripped}}">L-SAP</a>
-      <select id="version" required>
-        <option *ngFor="let v of versions">{{ version }}</option>
+      <select id="version" (change)="navigateToNewVersion($event.target.value)" required>
+        <option *ngFor="let v of versions">{{ v }}</option>
       </select>
     </div>
     <div class="col">
@@ -11,7 +11,7 @@
         <input id='search' type="text" class="form-control" placeholder="Search" aria-label="Username" aria-describedby="basic-addon1" (input)="search($event)"
                ng-model="values">
       </div>
-      <app-filter [version]="versionStripped"></app-filter>
+      <app-filter [version]="version"></app-filter>
     </div>
   </div>
 </nav>
