null checks & bug fixes

--- a/site/src/app/home/home.component.html
+++ b/site/src/app/home/home.component.html
@@ -1,1 +1,2 @@
 <app-navbar [(version)]="version" [versionStripped]="versionStripped" [versions]="versions" ></app-navbar>
+<router-outlet></router-outlet>
