--- a/site/src/app/home/home.component.html
+++ b/site/src/app/home/home.component.html
@@ -1,2 +1,2 @@
-<app-navbar [(version)]="version" [versionStripped]="versionStripped" [versions]="versions" ></app-navbar>
+<app-navbar [(version)]="version" [versionStripped]="versionStripped" [versions]="versions" (searchTermChange)="passToLinks($event)" ></app-navbar>
 <router-outlet></router-outlet>
